--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -428,7 +428,7 @@ Describe the graph here. Range etc.
 knitr::include_graphics("ch_deep_sampling/images/figure3.png")
 ```
 
-We simulate the situation illustrated in the figure above. We start by creating three identical populations of people.
+In this section we see that when you have three identical populations of people that the results are the same as when you have one population of people. We simulate the situation illustrated in the figure above. We start by creating three identical populations of people.
 
 ```{r, eval = FALSE}
 library(learnSampling)
