--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -390,6 +390,9 @@ The result is data_ratios3. We can see the first few rows below.
 head(data_ratios)
 ```
 
+In the first row of the above table we obtained 3 samples from the population of people and then used that data  to **estimate** the variance of the sampling distribution of means using method 1 and method 2. Then we create a ratio of those two values (method 1/method 2). Each additional row of table shows a case were were did this same thing with three new samples. There are a total of 100,000 rows in this table.
+
+
 We obtain the summary statistics with the skim command:
 
 ```{r, eval = FALSE}
@@ -401,11 +404,10 @@ skim(data_ratios)
 knitr::include_graphics("ch_deep_sampling/images/skim_screenshot.png")
 ```
 
-An inspection of the output in Figure XX above illustrates that, on average (over many trials), both Method 1 and Method 2 produce the save result as our calculations above.
+Recall that previously, we used Equation \@ref(eq:popvarCLTxbardeep) to calculate $\sigma_{\bar{x}}^2 = 31.26472$. Each row in table above presents two estimates (i.e., $s_{\bar{x}}^2$) of $\sigma_{\bar{x}}^2$. You can see that the method 1 approach for obtaining $s_{\bar{x}}^2$ was on average correct becase of the 31.3 value in the blue box. Likewise, you can see that the method 2 approach for obtaining $s_{\bar{x}}^2$ was on average correct because of the 31.3 value in the blue box. 
 
-You may be suprised to see that the ratio - is 1.20 on average and not 1.00. This occurs because the ratio is constructed base on each trial of the simulation (rather than the overal shown in the output). If you were to make a histograph of method_1\_var_est values and histogram of the method_2\_clt_est values you would see they have different shapes. As a result, the mean ratio is 1.20 rather than 1.00. But that's ok, we just need to remember that the ratio is **roughly** 1.00 when the two methods are used on the same popualtion.
+Although each estimate was on average correct, the two estimates were not always the same. Recall we compared the two estimates by making a ratio. In the graph below you can see the range of values that occur with this ratio. 
 
-What's more interesting is thinking about how large this ratio of variances can get. Let's look a graph of the values in the var_ratio column. We can graph the variance ratios with the code below:
 
 ```{r, out.width="100%", echo=FALSE}
 library(ggplot2)
@@ -420,7 +422,9 @@ ggplot(data = data_ratios, mapping = aes(x = var_ratio)) +
   theme_classic()
 ```
 
-Describe the graph here. Range etc.
+
+This graph illustrates the range of ratio values that can occur when there is a single population and $a = 3$ and $n = 5$ (or more formally, there are 2, $(a -1)$, and 12, $a(n-1)$, degrees of freedom).
+
 
 ## Simulation 3 identical populations
 
@@ -462,6 +466,9 @@ The result is data_ratios3. We can see the first few rows below.
 head(data_ratios3)
 ```
 
+In the first row of the above table we obtained 3 samples (one from each population) and then used that data to **estimate** the variance of the sampling distribution of means using method 1 and method 2. Then we create a ratio of those two values (method 1/method 2). Each additional row of table shows a case were were did this same thing with three new samples. There are a total of 100,000 rows in this table.
+
+
 We obtain the summary statistics with the skim command:
 
 ```{r, eval = FALSE}
@@ -473,7 +480,9 @@ skim(data_ratios3)
 knitr::include_graphics("ch_deep_sampling/images/skim_screenshot_pop3.png")
 ```
 
-What's more interesting is thinking about how large this ratio of variances can get. Let's look a graph of the values in the var_ratio column. We can graph the variance ratios with the code below:
+Recall that previously, we used Equation \@ref(eq:popvarCLTxbardeep) to calculate $\sigma_{\bar{x}}^2 = 31.26472$. Each row in table above presents two estimates (i.e., $s_{\bar{x}}^2$) of $\sigma_{\bar{x}}^2$. You can see that the method 1 approach for obtaining $s_{\bar{x}}^2$ was on average correct becase of the 31.3 value in the green box. Likewise, you can see that the method 2 approach for obtaining $s_{\bar{x}}^2$ was on average correct because of the 31.3 value in the green box. 
+
+Although each estimate was on average correct, the two estimates were not always the same. Recall we compared the two estimates by making a ratio. In the graph below you can see the range of values that occur with this ratio. 
 
 ```{r, out.width="100%", echo=FALSE}
 library(ggplot2)
@@ -489,7 +498,10 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   theme_classic()
 ```
 
-Describe the graph here. Range etc.
+Keep in mind that this is the range of ratios that can occur when all three populations have the same mean. In the above graph we use a vertical blue line to distinguish between the lower 95% of ratio values and the upper 5% of ratios values.
+
+How did we know where to place this line? We simply sorted the ratios from smallest to largest. Then when to the 95% percentile spot in that list. Just follow the code below to see the details.
+
 
 ### Extreme ratio values
 
@@ -507,9 +519,14 @@ extreme_cut_off3 <- round(extreme_cut_off3, 2)
 print(extreme_cut_off3)
 ```
 
-Thus, $F_{critical}$(2, 12) = 3.88.
 
-Compare to an $F$-table.
+### It's an F-value
+Most importantly, we don't usually refer to this ratio as a variance ratio. We refer to it as the F-ratio. 
+
+We used this simulation to see the range of F-ratios that occur when we KNOW all the population means are equal. You can see that this range of F-ratio value is quite wide from the graph. But, we estimated that when all three populations means are equal (and n = 5) that only 5% of F-ratios will fall above a value we estimated to be 3.88. This value is what we refer to as $F_{critical}$. Thus, $F_{critical}$(2, 12) = 3.88. 
+
+Compare the value we obtained to the values in $F$-table. A F-table is a table of $F_{critical}$ values. You can see the value in the table is 3.89 compared to our estimate of 3.88. 
+
 
 ```{r, echo = FALSE, out.width="60%"}
 knitr::include_graphics("ch_deep_sampling/images/ftable.png")
