--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -4,7 +4,7 @@ output:
   html_document: default
 ---
 
-# Deep Dive: Sampling Distributions [DRAFT]
+# Deep Dive: Sampling Distributions [EARLY DRAFT]
 
 ## A tale of two methods
 
