--- a/packages.bib
+++ b/packages.bib
@@ -1,3 +1,11 @@
+@Manual{R-apaTables,
+  title = {apaTables: Create American Psychological Association (APA) Style Tables},
+  author = {David Stanley},
+  year = {2021},
+  note = {R package version 2.0.8},
+  url = {https://github.com/dstanley4/apaTables},
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -15,12 +23,81 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-broom,
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2021},
+  note = {https://broom.tidymodels.org/, https://github.com/tidymodels/broom},
+}
+
+@Manual{R-cocor,
+  title = {cocor: Comparing Correlations},
+  author = {Birk Diedenhofen},
+  year = {2016},
+  note = {R package version 1.1-3},
+  url = {http://comparingcorrelations.org},
+}
+
+@Manual{R-datasauRus,
+  title = {datasauRus: Datasets from the Datasaurus Dozen},
+  author = {Steph Locke and Lucy {D'Agostino McGowan}},
+  year = {2018},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=datasauRus},
+}
+
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2021},
+  note = {R package version 1.0.7},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-emoGG,
+  title = {emoGG: Use Emoji in ggplot2},
+  author = {David L Miller},
+  year = {2021},
+  note = {R package version 0.0.2},
+}
+
+@Manual{R-fastInteraction,
+  title = {fastInteraction: Continuous variable interaction output and graphs (2D/3D)},
+  author = {David Stanley},
+  year = {2019},
+  note = {R package version 0.1.2},
+}
+
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{R-GGally,
+  title = {GGally: Extension to ggplot2},
+  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+  year = {2021},
+  note = {R package version 2.1.2},
+  url = {https://CRAN.R-project.org/package=GGally},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2021},
   note = {R package version 3.3.5},
   url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
+@Manual{R-janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://github.com/sfirke/janitor},
 }
 
 @Manual{R-knitr,
@@ -31,12 +108,107 @@
   url = {https://yihui.org/knitr/},
 }
 
+@Manual{R-learnSampling,
+  title = {learnSampling: Tools to help learn sampling},
+  author = {David J. Stanley},
+  year = {2020},
+  note = {R package version 0.2},
+}
+
+@Manual{R-MBESS,
+  title = {MBESS: The MBESS R Package},
+  author = {Ken Kelley},
+  year = {2020},
+  note = {R package version 4.8.0},
+  url = {http://nd.edu/~kkelley/site/MBESS.html},
+}
+
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{R-pwr,
+  title = {pwr: Basic Functions for Power Analysis},
+  author = {Stephane Champely},
+  year = {2020},
+  note = {R package version 1.3-0},
+  url = {https://github.com/heliosdrm/pwr},
+}
+
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
+
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2021},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
   note = {R package version 2.10},
   url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{R-skimr,
+  title = {skimr: Compact and Flexible Summaries of Data},
+  author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
+  year = {2021},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=skimr},
+}
+
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2021},
+  note = {R package version 3.1.4},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.3},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the Tidyverse},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+}
+
+@Manual{R-TOSTER,
+  title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
+  author = {Daniel Lakens},
+  year = {2018},
+  note = {R package version 0.3.4},
+  url = {https://CRAN.R-project.org/package=TOSTER},
 }
 
 @Book{bookdown2016,
@@ -47,6 +219,19 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Article{cocor2015,
+  author = {Birk Diedenhofen and Jochen Musch},
+  year = {2015},
+  title = {cocor: A Comprehensive Solution for the Statistical Comparison of Correlations},
+  journal = {PLoS ONE},
+  volume = {10},
+  number = {4},
+  pages = {e0121945},
+  doi = {10.1371/journal.pone.0121945},
+  url = {http://dx.doi.org/10.1371/journal.pone.0121945},
+  publisher = {Public Library of Science},
 }
 
 @Book{ggplot22016,
@@ -98,5 +283,26 @@
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{tidyverse2019,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
+}
+
+@Article{TOSTER2017,
+  author = {Daniel Lakens},
+  title = {Equivalence tests: A practical primer for t-tests, correlations, and meta-analyses},
+  journal = {Social Psychological and Personality Science},
+  year = {2017},
+  volume = {1},
+  pages = {1--8},
+  doi = {10.1177/1948550617697177},
 }
 
