--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -10,7 +10,7 @@ output:
 
 In this chapter, we focus on describing the distribution of sample means. Our goal is to understand the logic behind two different methods for estimating the variance of distribution of sample means. A thorough understanding of both of these two estimation methods lays the foundation for understanding Analysis of Variance (ANOVA).
 
-Understanding the logic behind both methods for estimating the variance of the distribution of sample means is critical. In this chapter, where there is one population of people, the two methods estimate the same thing - variabilty in sample means **due to random sampling**. However, in future chapters, where there are multiple populations with different means, the two methods estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both methods when there is a single population of people. 
+Understanding the logic behind both methods for estimating the variance of the distribution of sample means is critical. In this chapter, where there is one population of people, the two methods estimate the same thing - variabilty in sample means **due to random sampling**. However, in future chapters, where there are multiple populations of people with different means, the two methods estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both methods in the simple case - where there is a single population of people. 
 
 **What we learn in this chapter (and the pattern of results we obtain) will serve as frame-of-reference for interpreting more complex situations in future chapters.**
 
