--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -367,7 +367,7 @@ $$
 
 ## Simulation 1 population
 
-```{r sim1pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from 1 population"}
+```{r sim1pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from one population"}
 knitr::include_graphics("ch_deep_sampling/images/figure2.png")
 ```
 
@@ -441,11 +441,11 @@ This graph illustrates the range of ratio values that can occur when there is a 
 
 ## Simulation 3 identical populations
 
-```{r, out.width = "100%", echo=FALSE}
+```{r sim3pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from three identical population"}
 knitr::include_graphics("ch_deep_sampling/images/figure3.png")
 ```
 
-In this section we see that when you have three identical populations of people that the results are the same as when you have one population of people. We simulate the situation illustrated in the figure above. We start by creating three identical populations of people.
+In this section we see that when you have three identical populations of people, see Figure \@ref(fig:sim3pop), that the results are the same as when you have one population of people. We simulate the situation illustrated in the figure above. We start by creating three identical populations of people.
 
 ```{r, eval = FALSE}
 library(learnSampling)
