--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -79,7 +79,7 @@ A key point to remember is that the mean of the sample means, $\mu_{\bar{x}}$, w
 
 ## Sample mean distribution variance
 
-When there is *one* **population of people** (see Figure \@ref(fig:chdeepfigure1)A) there is a single distribution of sample means that corresponds to that population (see Figure \@ref(fig:chdeepfigure1)B). There are two methods for calculating the variance of this distribution of sample means.
+When there is *one* **population of people** (see Figure \@ref(fig:chdeepfigure1)A) there is a single distribution of sample means that corresponds to that population (see Figure \@ref(fig:chdeepfigure1)B). In this scenario, the sample means differ only because random sampling. There are two methods for calculating the variance of this distribution of sample means.
 
 ### Method 1: Calculate the variance of infinite sample means
 
