--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -242,7 +242,7 @@ In this section we focus on estimating the variance of the distribution of sampl
 
 ### Method 1: Estimate the variance of infinite sample means using 3 sample means
 
-We can use the sample means presented in the table above to estimate the variance of the distribution of sample means as illustrated in the formula below. Recall, we use the lower case "$a$" to represent the number of sample means (in the case because we have 3 sample means $a = 3$).
+We can use the sample means presented in the table above to estimate the variance of the distribution of sample means as illustrated in the formula below. Recall, we use the lower case "$a$" to represent the number of sample means (in the case because we have 3 sample means $a = 3$). We think of these three sample means as a subset of the distribution of an infinite number of sample means (i.e., a population of sample means, $A=infty$) illustrated in Figure @ref(fig:chdeepfigure1)B. Consequently, we use the standard approach of estimating the variance of a larger set of elements from a (i.e. a population of sample means) subset of those elements (i.e., a sample of sample means) by including "-1" in the denominator of the variance formula, see Equation \@ref(eq:estpopvarxbardeep) below.
 
 ```{=tex}
 \begin{equation} 
@@ -250,9 +250,9 @@ s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}
       (\#eq:estpopvarxbardeep)
 \end{equation}
 ```
-In this example (see table above), we have 3 sample means (each based on n = 5) so $a = 3$. Let's estimate the variance of the distribution of sample means (Figure \@ref(fig:chdeepfigure1)B) using these three sample means.
 
-First, we calculate the mean of the three sample means ($\mu_{\bar{x}}$) because we will need that in the variance formula.
+
+First, we calculate the mean of the three sample means ($\bar\bar{x}}$) because we will need that in the variance formula.
 
 $$
 \begin{aligned} 
@@ -263,7 +263,7 @@ $$
 \end{aligned} 
 $$
 
-Second, we estimate the variance of the population of sample means ($s_{\bar{x}}^2$, see Figure \@ref(fig:chdeepfigure1)B) using the set of sample means. Notice the use of "-1" in the denominator - [which we discussed previously in the sample accuracy chapter](https://dstanley4.github.io/psyc6060bookdown/sampling-accuracy.html#estimating-sigma2). The use of the "-1" in the denominator means we are not calculating the variance of these three sample means. Rather, when we use "-1" in the denominator we are **estimating** the variance of the population of sample means from which they were obtained (i.e., the distribution of sample means depicted in Figure \@ref(fig:chdeepfigure1)B).
+Second, we estimate the variance of the population of sample means ($s_{\bar{x}}^2$, see Figure \@ref(fig:chdeepfigure1)B) using the set of sample means. Again, notice the use of "-1" in the denominator - [which we discussed previously in the sample accuracy chapter](https://dstanley4.github.io/psyc6060bookdown/sampling-accuracy.html#estimating-sigma2). The use of the "-1" in the denominator means we are not calculating the variance of these three sample means. Rather, when we use "-1" in the denominator we are **estimating** the variance of the population of sample means from which they were obtained (i.e., the distribution of sample means depicted in Figure \@ref(fig:chdeepfigure1)B).
 
 $$
 \begin{aligned} 
