--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -374,6 +374,8 @@ $$
 
 ## Frame of reference: Random sampling only
 
+In this section we focus on using simulations to establish a frame of reference for interpretting the variance ratio when random sampling is the only reason sample means differ from each other.
+
 ### Simulation 1 population
 
 ```{r sim1pop, out.width = "100%", echo=FALSE, fig.cap= "Sampling from one population"}
